# qr-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/: FUNDING.yml
.github/workflows/: rust.yml
docs/: README.md
src/: args.rs  error.rs  main.rs  utils.rs
