[package]
name = "qr-rs"
version = "0.1.0"
authors = ["Marco Radocchia <marco.radocchia@outlook.com"]
edition = "2021"
rust-version = "1.61.0"
description = "Encode URLs or text into QR codes."
readme = "README.md"
repository = "https://github.com/marcoradocchia/qr-rs"
license = "GPL-3.0-only"
keywords = ["qr", "qrcode", "qr-code", "generator", "url"]
categories = ["command-line-utilities", "computer-vision", "encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "qr"
path = "src/main.rs"

[dependencies]
qrcodegen = { version = "1.8.0" }
clap = { version = "3.2.7", features = ["derive"] }
directories = { version = "4.0.1" }
termcolor = { version = "1.1.3" }
dialoguer = { version = "0.10.1" }
regex = { version = "1.5.6" }
lazy_static = { version = "1.4.0" }
image = { version = "0.24.2" }
