[package]
name = "qr-rs"
version = "0.2.0"
authors = ["Marco Radocchia <marco.radocchia@outlook.com"]
edition = "2021"
rust-version = "1.62.0"
description = "A CLI utility to encode URLs or text into QR codes in various formats and colors."
readme = "README.md"
repository = "https://github.com/marcoradocchia/qr-rs"
license = "GPL-3.0-only"
keywords = ["qr", "qrcode", "qr-code", "generator", "url"]
categories = ["command-line-utilities", "computer-vision", "encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "qr"
path = "src/main.rs"

[dependencies]
qrcodegen = { version = "1.8.0" }
clap = { version = "3.2.12", features = ["derive"] }
directories = { version = "4.0.1" }
termcolor = { version = "1.1.3" }
dialoguer = { version = "0.10.1" }
regex = { version = "1.6.0" }
lazy_static = { version = "1.4.0" }
image = { version = "0.24.2" }
atty = { version = "0.2.14" }

[profile.release]
lto = true # link-time-optimization
strip = true # strip symbols from binary
