[package]
name = "qr-rs"
version = "0.3.0"
authors = ["Marco Radocchia <mar.radocchia@proton.me>"]
edition = "2021"
rust-version = "1.70.0"
description = "A CLI utility to encode URLs or text into QR codes in various formats and colors."
readme = "README.md"
repository = "https://github.com/marcoradocchia/qr-rs"
license = "GPL-3.0-only"
keywords = ["qr", "qrcode", "qr-code", "generator", "url"]
categories = ["command-line-utilities", "computer-vision", "encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "qr"
path = "src/main.rs"

[dependencies.qrcodegen]
version = "1.8.0"

[dependencies.clap]
version = "4.5.39"
features = ["derive"]

[dependencies.directories]
version = "6.0.0"

[dependencies.termcolor]
version = "1.4.1"

[dependencies.dialoguer]
version = "0.11.0"

[dependencies.regex]
version = "1.11.1"

[dependencies.lazy_static]
version = "1.5.0"

[dependencies.image]
version = "0.25.6"

[build-dependencies.clap]
version = "4.5.39"
features = ["derive"]

[build-dependencies.clap_mangen]
version = "0.2.26"

[build-dependencies.clap_complete]
version = "4.5.52"

[build-dependencies.qrcodegen]
version = "1.8.0"

[build-dependencies.lazy_static]
version = "1.5.0"

[build-dependencies.regex]
version = "1.11.1"

[profile.release]
codegen-units = 1
lto = true
strip = true
